[gd_scene load_steps=27 format=3 uid="uid://bvlq33ff2vsar"]

[ext_resource type="Script" path="res://quiz_screen.gd" id="1_t4fky"]
[ext_resource type="ButtonGroup" uid="uid://cv12kw52jwh78" path="res://choices_button_group.tres" id="2_gin4e"]
[ext_resource type="Texture2D" uid="uid://ca3svolljmgya" path="res://assets/Pink_Monster_Jump_8.png" id="3_rscq8"]
[ext_resource type="Texture2D" uid="uid://c0lg7bsrky5da" path="res://assets/Pink_Monster_Death_8.png" id="4_41yrh"]
[ext_resource type="AudioStream" uid="uid://6lsqx7vwi1ax" path="res://assets/up.wav" id="5_nw8xe"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_e8wcv"]
number_color = Color(0.611765, 0.862745, 0.996078, 1)
symbol_color = Color(0.811765, 0.533333, 0.796078, 1)
function_color = Color(0.662745, 0.886275, 0.721569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akapy"]
bg_color = Color(0.92, 0.30728, 0.2392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjo4l"]
bg_color = Color(0.945098, 0.768627, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fjmm"]
bg_color = Color(0.180392, 0.8, 0.443137, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmy05"]
atlas = ExtResource("3_rscq8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ujqb"]
atlas = ExtResource("3_rscq8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6djjy"]
atlas = ExtResource("3_rscq8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apheg"]
atlas = ExtResource("3_rscq8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc62d"]
atlas = ExtResource("3_rscq8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ude3l"]
atlas = ExtResource("3_rscq8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7tcj"]
atlas = ExtResource("3_rscq8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wl4o"]
atlas = ExtResource("3_rscq8")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rde5"]
atlas = ExtResource("4_41yrh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlt5k"]
atlas = ExtResource("4_41yrh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqftc"]
atlas = ExtResource("4_41yrh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8sar"]
atlas = ExtResource("4_41yrh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10s1l"]
atlas = ExtResource("4_41yrh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgkbt"]
atlas = ExtResource("4_41yrh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65erm"]
atlas = ExtResource("4_41yrh")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pespe"]
atlas = ExtResource("4_41yrh")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ehmc6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmy05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ujqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6djjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apheg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc62d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ude3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7tcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wl4o")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rde5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlt5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqftc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8sar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10s1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgkbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65erm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pespe")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"wrong",
"speed": 15.0
}]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4fky")
choices_group = ExtResource("2_gin4e")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.5
offset_top = -330.5
offset_right = 407.5
offset_bottom = 330.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "Level: 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPLabel" type="Label" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "XP: 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextLevelProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
max_value = 200.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_constants/margin_top = 228

[node name="MessageLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer3/MarginContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Press the button containng the correct answer!"
fit_content = true

[node name="ExitButton" type="Button" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "EXIT"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="CorrectLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 35
text = "Correct: 0
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TotalLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 35
text = "Attempts: 0
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QuestionLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 40
text = "What does the following return?
"
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="CodeLabel" type="CodeEdit" parent="HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 175)
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/background_color = Color(0.301961, 0.301961, 0.301961, 1)
theme_override_font_sizes/font_size = 37
text = "for i in range(5):
	print(i)
	print(\"hello\")"
editable = false
selecting_enabled = false
syntax_highlighter = SubResource("CodeHighlighter_e8wcv")
gutters_draw_line_numbers = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/h_separation = 11
theme_override_constants/v_separation = 11
columns = 2

[node name="Button1" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_gin4e")
text = "Joins text"

[node name="Button2" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_gin4e")
text = "Hides details"

[node name="Button3" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_gin4e")
text = "Gives abs traction
"

[node name="Button4" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 125)
layout_mode = 2
theme_override_font_sizes/font_size = 30
toggle_mode = true
button_group = ExtResource("2_gin4e")
text = "Hamburger"

[node name="QuestionXPLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 30
text = "Question XP: 0
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
alignment = 1

[node name="TimerLabel" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Time: 00:00:00
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Freddy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Health "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_akapy")
step = 0.1
value = 100.0
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="EnergyLabel" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Energy "
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_fjo4l")
step = 0.1
value = 100.0
allow_greater = true

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HappinessLabel" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Happiness "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HappinessBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_7fjmm")
step = 0.1
value = 100.0
allow_greater = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HBoxContainer/VBoxContainer2"]
texture_filter = 1
position = Vector2(337.5, 427)
scale = Vector2(6.259, 6.5)
sprite_frames = SubResource("SpriteFrames_ehmc6")
animation = &"jump"

[node name="FoodLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Food: 0"
vertical_alignment = 2

[node name="CoinLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Money: 0"
vertical_alignment = 2

[node name="BankLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Bank: 0"
vertical_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_nw8xe")

[node name="WarningWindow" type="Window" parent="."]
disable_3d = true
title = "Message"
initial_position = 2
size = Vector2i(650, 300)
visible = false
transient = true
exclusive = true
unresizable = true
popup_window = true
min_size = Vector2i(400, 300)
max_size = Vector2i(800, 800)
keep_title_visible = true
auto_translate = false

[node name="VBoxContainer" type="VBoxContainer" parent="WarningWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WarningLabel" type="Label" parent="WarningWindow/VBoxContainer"]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 25
text = "YOU LOST ALL YOUR HEALTH!

You will go back to beginning of the current level, lose half of your food, and half of your coins."
autowrap_mode = 2

[node name="MessageCloseButton" type="Button" parent="WarningWindow/VBoxContainer"]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "CLOSE"

[node name="ExitWindow" type="Window" parent="."]
disable_3d = true
title = "Your Save Code"
initial_position = 2
size = Vector2i(800, 400)
visible = false
transient = true
exclusive = true
unresizable = true
popup_window = true
min_size = Vector2i(400, 300)
max_size = Vector2i(800, 800)
keep_title_visible = true
auto_translate = false
theme_override_font_sizes/title_font_size = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ExitWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="SaveReminderLabel" type="Label" parent="ExitWindow/VBoxContainer"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "SAVE YOUR CODE BEFORE EXITING
"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="SaveCode" type="LineEdit" parent="ExitWindow/VBoxContainer"]
custom_minimum_size = Vector2(700, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Save Code"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ExitWindow/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LeaveButton" type="Button" parent="ExitWindow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 25
text = "Exit"

[node name="CancelButton" type="Button" parent="ExitWindow/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 65)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Cancel"

[connection signal="pressed" from="HBoxContainer/VBoxContainer3/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="WarningWindow/VBoxContainer/MessageCloseButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ExitWindow/VBoxContainer/HBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="ExitWindow/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
